Edits to dungeon timing

--- a/Resources/Prototypes/_NF/Events/nf_bluespace_dungeons_events.yml
+++ b/Resources/Prototypes/_NF/Events/nf_bluespace_dungeons_events.yml
@@ -12,9 +12,9 @@
     endRadioAnnouncement: station-event-bluespace-dungeon-end-announcement
     endRadioAnnouncementChannel: Supply
     weight: 5
-    duration: 3600 # 1 hour
-    maxDuration: 3600 # 1 hour
-    reoccurrenceDelay: 120 # 2 hours
+    duration: 1800 # 30 minutes
+    maxDuration: 1800 # 30 minutes
+    reoccurrenceDelay: 120 # 2 hours (some variety - at worst, alternates between four dungeon types)
   - type: ActiveRadio
     channels:
     - Supply
