fix my own decal mistakes

--- a/Resources/Maps/_NF/POI/trademall.yml
+++ b/Resources/Maps/_NF/POI/trademall.yml
@@ -1087,7 +1087,6 @@ entities:
             1871: 13,-1
             1946: -32,-1
             1973: 1,-42
-            1978: 1,40
         - node:
             color: '#FFFFFFFF'
             id: BrickTileDarkInnerSw
@@ -1219,13 +1218,9 @@ entities:
             1897: -11,-6
             1906: -11,-7
             1907: -11,-8
-            1948: -32,2
             1949: -32,3
-            1950: -32,-2
             1951: -32,-3
             1970: 1,-44
-            1971: 1,-43
-            1980: 1,43
             1981: 1,44
         - node:
             color: '#FFFFFFFF'
@@ -1325,15 +1320,10 @@ entities:
             1824: 30,-3
             1859: 28,-11
             1860: 29,-11
-            1958: -35,1
             1959: -36,1
-            1960: 2,-40
             1961: 3,-40
-            1962: -2,-40
             1963: -3,-40
-            1982: 2,42
             1983: 3,42
-            1984: -2,42
             1985: -3,42
         - node:
             color: '#FFFFFFFF'
@@ -1438,15 +1428,10 @@ entities:
             1739: 20,16
             1740: 19,16
             1741: 18,16
-            1956: -35,-1
             1957: -36,-1
             1964: -3,-42
-            1965: -2,-42
-            1966: 2,-42
             1967: 3,-42
             1986: -3,40
-            1987: -2,40
-            1988: 2,40
             1989: 3,40
         - node:
             color: '#FFFFFFFF'
@@ -1580,12 +1565,8 @@ entities:
             1857: 27,-12
             1878: 10,-6
             1952: -34,-3
-            1953: -34,-2
             1954: -34,3
-            1955: -34,2
             1968: -1,-44
-            1969: -1,-43
-            1990: -1,43
             1991: -1,44
         - node:
             color: '#FFFFFFFF'
@@ -2410,9 +2391,7 @@ entities:
             1032: -24,1
             1033: -24,0
             1034: -24,-1
-            1035: -35,-1
             1036: -35,0
-            1037: -35,1
             1038: -37,1
             1039: -37,0
             1040: -37,-1
@@ -2427,12 +2406,8 @@ entities:
             1081: -2,-1
             1082: -2,0
             1083: -2,1
-            1111: 2,42
             1112: 2,41
-            1113: 2,40
-            1114: -2,42
             1115: -2,41
-            1116: -2,40
             1117: -4,42
             1118: -4,41
             1119: -4,40
@@ -2464,12 +2439,8 @@ entities:
             1232: -4,-40
             1233: -4,-41
             1234: -4,-42
-            1235: -2,-40
             1236: -2,-41
-            1237: -2,-42
-            1238: 2,-40
             1239: 2,-41
-            1240: 2,-42
             1251: 25,7
             1265: 18,22
             1266: 16,18
@@ -2499,6 +2470,16 @@ entities:
             1398: 65,1
             1403: 56,-9
             1404: 56,9
+            1992: 2,-42
+            1993: 2,-40
+            1994: -2,-42
+            1995: -2,-40
+            1996: 2,40
+            1997: 2,42
+            1998: -2,40
+            1999: -2,42
+            2000: -35,-1
+            2001: -35,1
         - node:
             color: '#4D65B4FF'
             id: WarnLineGreyscaleE
@@ -2521,12 +2502,8 @@ entities:
             707: 53,13
             708: 54,13
             772: 62,-1
-            1041: -34,-2
             1042: -33,-2
-            1043: -32,-2
-            1044: -34,2
             1045: -33,2
-            1046: -32,2
             1047: -34,4
             1048: -33,4
             1049: -32,4
@@ -2541,8 +2518,6 @@ entities:
             1093: -1,2
             1094: 0,2
             1095: 1,2
-            1120: -1,43
-            1121: 1,43
             1122: -1,45
             1123: 1,45
             1129: -1,32
@@ -2570,9 +2545,7 @@ entities:
             1217: 0,-33
             1218: -1,-33
             1219: 1,-33
-            1229: -1,-43
             1230: 0,-43
-            1231: 1,-43
             1252: 27,5
             1253: 27,9
             1257: 27,13
@@ -2616,6 +2589,14 @@ entities:
             1394: 51,15
             1405: 49,-15
             1406: 51,-15
+            2012: -1,43
+            2013: 1,43
+            2014: 1,-43
+            2015: -1,-43
+            2016: -32,-2
+            2017: -34,-2
+            2018: -34,2
+            2019: -32,2
         - node:
             color: '#FFFFFFFF'
             id: WarnLineS
@@ -2625,9 +2606,7 @@ entities:
             696: 63,-2
             697: 55,12
             771: 49,-12
-            1026: -35,1
             1027: -35,0
-            1028: -35,-1
             1029: -24,1
             1030: -24,0
             1031: -24,-1
@@ -2644,12 +2623,8 @@ entities:
             1102: 4,42
             1103: 4,41
             1104: 4,40
-            1105: 2,40
             1106: 2,41
-            1107: 2,42
-            1108: -2,42
             1109: -2,41
-            1110: -2,40
             1134: 2,28
             1135: 2,29
             1136: 9,27
@@ -2674,12 +2649,8 @@ entities:
             1213: 5,-21
             1214: 5,-22
             1215: 2,-28
-            1241: -2,-40
             1242: -2,-41
-            1243: -2,-42
-            1244: 2,-40
             1245: 2,-41
-            1246: 2,-42
             1247: 4,-40
             1248: 4,-41
             1249: 4,-42
@@ -2712,6 +2683,16 @@ entities:
             1400: 65,1
             1401: 68,1
             1402: 68,-1
+            2002: -35,-1
+            2003: -35,1
+            2004: -2,-40
+            2005: -2,-42
+            2006: 2,-42
+            2007: 2,-40
+            2008: 2,40
+            2009: 2,42
+            2010: -2,42
+            2011: -2,40
         - node:
             color: '#FFFFFFFF'
             id: WarnLineW
@@ -2723,12 +2704,8 @@ entities:
             699: 53,11
             700: 52,11
             701: 62,-5
-            1050: -34,2
             1051: -33,2
-            1052: -32,2
-            1053: -34,-2
             1054: -33,-2
-            1055: -32,-2
             1056: -34,-4
             1057: -32,-4
             1058: -33,-4
@@ -2743,8 +2720,6 @@ entities:
             1087: -1,-2
             1088: 0,-2
             1089: 1,-2
-            1124: -1,43
-            1125: 1,43
             1126: -1,32
             1127: 0,32
             1128: 1,32
@@ -2768,9 +2743,7 @@ entities:
             1220: -1,-33
             1221: 0,-33
             1222: 1,-33
-            1223: -1,-43
             1224: 0,-43
-            1225: 1,-43
             1226: -1,-45
             1227: 0,-45
             1228: 1,-45
@@ -2818,6 +2791,14 @@ entities:
             1396: 51,15
             1407: 49,-15
             1408: 51,-15
+            2020: -34,2
+            2021: -32,2
+            2022: -32,-2
+            2023: -34,-2
+            2024: -1,-43
+            2025: 1,-43
+            2026: 1,43
+            2027: -1,43
         - node:
             color: '#FFFFFFFF'
             id: WoodTrimThinInnerNw
@@ -3324,6 +3305,16 @@ entities:
       parent: 1
 - proto: AirlockExternalGlass
   entities:
+  - uid: 157
+    components:
+    - type: Transform
+      pos: 2.5,42.5
+      parent: 1
+  - uid: 158
+    components:
+    - type: Transform
+      pos: -1.5,40.5
+      parent: 1
   - uid: 1757
     components:
     - type: Transform
@@ -3333,14 +3324,12 @@ entities:
   - uid: 1758
     components:
     - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: 1.5,-42.5
+      pos: 2.5,40.5
       parent: 1
   - uid: 1767
     components:
     - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: -1.5,-41.5
+      pos: 1.5,43.5
       parent: 1
   - uid: 1833
     components:
@@ -3369,8 +3358,7 @@ entities:
   - uid: 2335
     components:
     - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: -0.5,-42.5
+      pos: -1.5,42.5
       parent: 1
   - uid: 2336
     components:
@@ -3387,26 +3375,22 @@ entities:
   - uid: 2364
     components:
     - type: Transform
-      rot: 1.5707963267948966 rad
       pos: 2.5,-41.5
       parent: 1
   - uid: 2365
     components:
     - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: -1.5,-39.5
+      pos: -34.5,1.5
       parent: 1
   - uid: 2368
     components:
     - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -0.5,43.5
+      pos: -31.5,-1.5
       parent: 1
   - uid: 2473
     components:
     - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -31.5,-1.5
+      pos: -34.5,-0.5
       parent: 1
   - uid: 2474
     components:
@@ -3423,20 +3407,17 @@ entities:
   - uid: 2476
     components:
     - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -34.5,1.5
+      pos: -31.5,2.5
       parent: 1
   - uid: 2477
     components:
     - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -33.5,-1.5
+      pos: -33.5,2.5
       parent: 1
   - uid: 2478
     components:
     - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -34.5,-0.5
+      pos: -33.5,-1.5
       parent: 1
   - uid: 2479
     components:
@@ -3447,14 +3428,12 @@ entities:
   - uid: 2480
     components:
     - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -33.5,2.5
+      pos: -0.5,43.5
       parent: 1
   - uid: 2482
     components:
     - type: Transform
-      rot: 3.141592653589793 rad
-      pos: -31.5,2.5
+      pos: 1.5,-42.5
       parent: 1
   - uid: 2483
     components:
@@ -3465,14 +3444,12 @@ entities:
   - uid: 2484
     components:
     - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: 2.5,-39.5
+      pos: -0.5,-42.5
       parent: 1
   - uid: 2485
     components:
     - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: -1.5,42.5
+      pos: -1.5,-39.5
       parent: 1
   - uid: 2486
     components:
@@ -3483,14 +3460,12 @@ entities:
   - uid: 2487
     components:
     - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: -1.5,40.5
+      pos: 2.5,-39.5
       parent: 1
   - uid: 2488
     components:
     - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: 2.5,42.5
+      pos: -1.5,-41.5
       parent: 1
   - uid: 2489
     components:
@@ -3498,23 +3473,11 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 2.5,41.5
       parent: 1
-  - uid: 2490
-    components:
-    - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: 2.5,40.5
-      parent: 1
   - uid: 2491
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 0.5,43.5
-      parent: 1
-  - uid: 2492
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 1.5,43.5
       parent: 1
   - uid: 2507
     components:
@@ -3636,7 +3599,7 @@ entities:
       pos: 16.5,-1.5
       parent: 1
     - type: Door
-      secondsUntilStateChange: -4743.9854
+      secondsUntilStateChange: -5778.739
       state: Opening
     - type: DeviceLinkSource
       lastSignals:
@@ -7651,16 +7614,6 @@ entities:
     - type: Transform
       pos: -6.5,20.5
       parent: 1
-  - uid: 157
-    components:
-    - type: Transform
-      pos: -0.5,-41.5
-      parent: 1
-  - uid: 158
-    components:
-    - type: Transform
-      pos: -0.5,-42.5
-      parent: 1
   - uid: 283
     components:
     - type: Transform
@@ -7836,6 +7789,16 @@ entities:
     - type: Transform
       pos: 1.5,-27.5
       parent: 1
+  - uid: 2490
+    components:
+    - type: Transform
+      pos: 0.5,-42.5
+      parent: 1
+  - uid: 2492
+    components:
+    - type: Transform
+      pos: 0.5,42.5
+      parent: 1
   - uid: 2497
     components:
     - type: Transform
@@ -7939,17 +7902,17 @@ entities:
   - uid: 2640
     components:
     - type: Transform
-      pos: 1.5,42.5
+      pos: 0.5,43.5
       parent: 1
   - uid: 2641
     components:
     - type: Transform
-      pos: 1.5,43.5
+      pos: 0.5,-43.5
       parent: 1
   - uid: 2642
     components:
     - type: Transform
-      pos: 1.5,44.5
+      pos: 1.5,-40.5
       parent: 1
   - uid: 2643
     components:
@@ -8029,12 +7992,12 @@ entities:
   - uid: 2672
     components:
     - type: Transform
-      pos: -0.5,-43.5
+      pos: 2.5,-40.5
       parent: 1
   - uid: 2673
     components:
     - type: Transform
-      pos: -0.5,-44.5
+      pos: 3.5,-40.5
       parent: 1
   - uid: 2674
     components:
@@ -10780,6 +10743,21 @@ entities:
     components:
     - type: Transform
       pos: 6.5,-18.5
+      parent: 1
+  - uid: 6071
+    components:
+    - type: Transform
+      pos: -0.5,-40.5
+      parent: 1
+  - uid: 6072
+    components:
+    - type: Transform
+      pos: -1.5,-40.5
+      parent: 1
+  - uid: 6073
+    components:
+    - type: Transform
+      pos: -2.5,-40.5
       parent: 1
 - proto: CableApcStack
   entities:
@@ -39223,6 +39201,14 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 9.5,-3.5
       parent: 1
+    - type: DeviceLinkSource
+      lastSignals:
+        DoorStatus: True
+    - type: Door
+      secondsUntilStateChange: -1006.26587
+      state: Opening
+    - type: Airlock
+      autoClose: False
   - uid: 49
     components:
     - type: Transform
