--- a/Resources/Maps/Corvax/Shuttles/Civilian/Aurora.yml
+++ b/Resources/Maps/Corvax/Shuttles/Civilian/Aurora.yml
@@ -9771,6 +9771,13 @@ entities:
     - type: Physics
       canCollide: False
     - type: InsideEntityStorage
+- proto: KitchenElectricRange
+  entities:
+  - uid: 1213
+    components:
+    - type: Transform
+      pos: 10.5,-8.5
+      parent: 2
 - proto: KitchenKnife
   entities:
   - uid: 1249
@@ -9780,13 +9787,6 @@ entities:
     - type: Physics
       canCollide: False
     - type: InsideEntityStorage
-- proto: KitchenMicrowave
-  entities:
-  - uid: 1218
-    components:
-    - type: Transform
-      pos: 10.5,-8.5
-      parent: 2
 - proto: KitchenReagentGrinder
   entities:
   - uid: 1250
@@ -11920,12 +11920,6 @@ entities:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -4.5,-13.5
-      parent: 2
-  - uid: 1213
-    components:
-    - type: Transform
-      rot: 1.5707963267948966 rad
-      pos: 10.5,-8.5
       parent: 2
   - uid: 1214
     components:
