--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/Computers/computers_shuttle_records.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/Computers/computers_shuttle_records.yml
@@ -2,7 +2,7 @@
   name: shuttle records console
   parent: [BaseStructureDisableToolUse, BaseStructureIndestructible, BaseComputer]
   id: ComputerShuttleRecordsBase
-  description: Used to recover lost ID cards
+  description: Used to browse shuttle records and recover or reassign shuttle ownership to IDs.
   abstract: true
   components:
   - type: Sprite
