--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/misc.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Ammunition/Projectiles/misc.yml
@@ -21,7 +21,7 @@
     state: magicm_cyan
     scale: 0.3,0.3
   - type: TimedDespawn
-    lifetime: 540
+    lifetime: 230 # Same as normal flare
   - type: AmbientSound
     enabled: true
     volume: -10
