--- a/Resources/Maps/_NF/Dungeon/lava_brig.yml
+++ b/Resources/Maps/_NF/Dungeon/lava_brig.yml
@@ -8373,7 +8373,7 @@ entities:
       rot: 1.5707963267948966 rad
       pos: 24.5,42.5
       parent: 588
-- proto: hydroponicsTray
+- proto: hydroponicsTrayAnchored
   entities:
   - uid: 796
     components:
@@ -9964,13 +9964,6 @@ entities:
     components:
     - type: Transform
       pos: 5.5,43.5
-      parent: 588
-- proto: RandomEngineerCorpseSpawner
-  entities:
-  - uid: 1851
-    components:
-    - type: Transform
-      pos: 5.5,8.5
       parent: 588
 - proto: RandomFoodSingle
   entities:
