--- a/Resources/Prototypes/_NF/Entities/Markers/warp_point.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/warp_point.yml
@@ -192,6 +192,53 @@
   - type: WarpPoint
     location: Cave
 
+# Scrap
+- type: entity
+  id: WarpPointNFScrap
+  parent: WarpPoint
+  suffix: Scrap, Derelict
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: WarpPoint
+    location: Derelict Shuttle
+
+# Dungeon
+- type: entity
+  id: WarpPointNFDengeonBasalt
+  parent: WarpPoint
+  suffix: Dungeon, Basalt
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: WarpPoint
+    location: Dungeon (Basalt)
+
+- type: entity
+  id: WarpPointNFDengeonSnow
+  parent: WarpPoint
+  suffix: Dungeon, Snow
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: WarpPoint
+    location: Dungeon (Snow)
+
+- type: entity
+  id: WarpPointNFDengeonCave
+  parent: WarpPoint
+  suffix: Dungeon, Cave
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: WarpPoint
+    location: Dungeon (Cave)
+
+- type: entity
+  id: WarpPointNFDengeonChromite
+  parent: WarpPoint
+  suffix: Dungeon, Chromite
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: WarpPoint
+    location: Dungeon (Chromite)
+
 # DeadDrop
 - type: entity
   id: WarpPointNFSyndicateSupplyDrop
