--- a/Resources/Prototypes/_NF/Events/nf_bluespace_grids_events.yml
+++ b/Resources/Prototypes/_NF/Events/nf_bluespace_grids_events.yml
@@ -1,4 +1,59 @@
 - type: entity
+  id: BluespaceScrap
+  parent: BaseStationEventShortDelay
+  name: NT Bluespace Monitoring # This name shows up in the radio messages.
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: StationEvent
+    startRadioAnnouncement: station-event-bluespace-scrap-start-announcement
+    startRadioAnnouncementChannel: Engineering
+    warningRadioAnnouncement: station-event-bluespace-scrap-warning-announcement
+    warningRadioAnnouncementChannel: Engineering
+    endRadioAnnouncement: station-event-bluespace-scrap-end-announcement
+    endRadioAnnouncementChannel: Engineering
+    earliestStart: 15
+    weight: 5
+    duration: 1800 # 30 minutes
+    maxDuration: 1800 # 30 minutes
+#    reoccurrenceDelay: 120 # 2 hours (some variety - at worst, alternates between four dungeon types)
+  - type: BluespaceErrorRule
+    groups:
+      grid: !type:GridSpawnGroup
+        nameDataset: names_scrap
+        minCount: 2
+        maxCount: 3
+        minimumDistance: 1500
+        maximumDistance: 2500
+        addComponents:
+        - type: Gravity
+          enabled: true
+          inherent: true
+        - type: IFF
+          color: "#AAAAAA"
+        - type: Shuttle
+          angularDamping: 999999
+          linearDamping: 999999
+        paths:
+        - /Maps/_NF/Shuttles/Scrap/bison.yml
+        - /Maps/_NF/Shuttles/Scrap/canister.yml
+        - /Maps/_NF/Shuttles/Scrap/disciple.yml
+        - /Maps/_NF/Shuttles/Scrap/nugget.yml
+        - /Maps/_NF/Shuttles/Scrap/orange.yml
+        - /Maps/_NF/Shuttles/Scrap/point.yml
+        - /Maps/_NF/Shuttles/Scrap/tide.yml
+        - /Maps/_NF/Shuttles/Scrap/scrap-inv.yml
+        - /Maps/_NF/Shuttles/Scrap/scrap-hauler.yml
+        - /Maps/_NF/Shuttles/Scrap/scrap-crescent.yml
+        - /Maps/_NF/Shuttles/Scrap/scrap-barge.yml
+        - /Maps/_NF/Shuttles/Scrap/scrap-courserx.yml
+        - /Maps/_NF/Shuttles/Scrap/scrap-comet.yml
+        - /Maps/_NF/Shuttles/Scrap/scrap-sprinter.yml
+        - /Maps/_NF/Shuttles/Scrap/scrap-inv.yml
+  - type: ActiveRadio
+    channels:
+    - Engineering
+
+- type: entity
   id: BluespaceCacheError
   parent: BaseStationEventShortDelay
   components:
