multiple accounts per interaction, ledger cart/icn

--- a/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
@@ -72,9 +72,8 @@
     hideCoords: false # Frontier
     maxIffRange: null # Frontier
   - type: CargoOrderConsole
-    taxCoefficient: 0.4 # Frontier
     taxAccounts: # Frontier
-    - Frontier # Frontier
+      Frontier: 0.4 # Frontier
   - type: BankClient
   - type: CrewMonitoringConsole
   - type: GeneralStationRecordConsole
