--- a/Resources/Prototypes/_NF/Entities/Objects/Devices/cartridges.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Devices/cartridges.yml
@@ -55,15 +55,15 @@
   components:
     - type: Sprite
       sprite: _NF/Objects/Devices/cartridge.rsi
-      state: cart-appraisal
+      state: cart-ledger
     - type: Icon
       sprite: _NF/Objects/Devices/cartridge.rsi
-      state: cart-appraisal
+      state: cart-ledger
     - type: UIFragment
       ui: !type:LedgerUi
     - type: Cartridge
       programName: ledger-program-name
-      icon: Objects/Tools/appraisal-tool.rsi/icon.png
+      icon: _NF/Interface/icons.rsi/ledger.png
     - type: NFLedgerCartridge
 
 # Not a PDA cartridge (then why is this here)
