--- a/Resources/Prototypes/_NF/Entities/Structures/atm.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/atm.yml
@@ -138,8 +138,8 @@
       enum.BankATMMenuUiKey.BlackMarket:
         type: BankATMMenuBoundUserInterface
   - type: BankATM
-    taxCoefficient: 0.3
-    taxAccount: Frontier # The scandal!
+    taxAccounts:
+      Frontier: 0.3 # The scandal!
 
 - type: entity
   suffix: Wallmount, BlackMarket
@@ -162,8 +162,8 @@
       enum.BankATMMenuUiKey.BlackMarket:
         type: BankATMMenuBoundUserInterface
   - type: BankATM
-    taxCoefficient: 0.3
-    taxAccount: Frontier # The scandal!
+    taxAccounts:
+      Frontier: 0.3 # The scandal!
 
 - type: entity
   name: station administration console
