--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/Computers/computers_shipyard.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/Computers/computers_shipyard.yml
@@ -131,9 +131,8 @@
   - type: ShipyardConsole
     shipyardChannel: Syndicate
     secretShipyardChannel: Nfsd
-    salesTax: 0.3
     taxAccounts:
-    - Frontier # The scandal!
+      Frontier: 0.3 # The scandal!
 
 - type: entity
   id: ComputerShipyardBlackMarket
@@ -161,9 +160,8 @@
   - type: ShipyardConsole
     shipyardChannel: Freelance
     secretShipyardChannel: Nfsd
-    salesTax: 0.3
     taxAccounts:
-    - Frontier # The scandal!
+      Frontier: 0.3 # The scandal!
 
 - type: entity
   id: ComputerShipyardExpedition
