Invalid nonsense I cast ye out

--- a/Resources/Maps/_NF/Shuttles/caladrius.yml
+++ b/Resources/Maps/_NF/Shuttles/caladrius.yml
@@ -2336,6 +2336,8 @@ entities:
       - 2247
       - 589
       - 859
+      - 2239
+      - 2240
 - proto: Airlock
   entities:
   - uid: 9
@@ -7397,8 +7399,8 @@ entities:
       pos: 1.5,-14.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
+      deviceLists:
+      - 2168
   - uid: 2240
     components:
     - type: Transform
@@ -7406,8 +7408,8 @@ entities:
       pos: 1.5,-15.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
+      deviceLists:
+      - 2168
 - proto: FirelockGlass
   entities:
   - uid: 17
@@ -7589,6 +7591,11 @@ entities:
     components:
     - type: Transform
       pos: 3.5,7.5
+      parent: 1
+  - uid: 2293
+    components:
+    - type: Transform
+      pos: 6.5,-12.5
       parent: 1
 - proto: Fireplace
   entities:
@@ -10635,8 +10642,6 @@ entities:
       pos: 13.5,-0.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 1069
     - type: AtmosPipeColor
@@ -10701,8 +10706,6 @@ entities:
       pos: -3.5,-15.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 2168
     - type: AtmosPipeColor
@@ -10714,8 +10717,6 @@ entities:
       pos: 6.5,5.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 1069
     - type: AtmosPipeColor
@@ -10772,8 +10773,6 @@ entities:
       pos: -13.5,3.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 1069
     - type: AtmosPipeColor
@@ -10835,8 +10834,6 @@ entities:
       pos: 11.5,4.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 1069
     - type: AtmosPipeColor
@@ -10848,8 +10845,6 @@ entities:
       pos: -4.5,-1.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 1069
     - type: AtmosPipeColor
@@ -10861,8 +10856,6 @@ entities:
       pos: -7.5,5.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 1069
     - type: AtmosPipeColor
@@ -10873,8 +10866,6 @@ entities:
       pos: -5.5,11.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 1069
     - type: AtmosPipeColor
@@ -10885,8 +10876,6 @@ entities:
       pos: 4.5,11.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 1069
     - type: AtmosPipeColor
@@ -10898,8 +10887,6 @@ entities:
       pos: 3.5,-1.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 1069
     - type: AtmosPipeColor
@@ -10975,8 +10962,6 @@ entities:
       pos: 2.5,5.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 1069
     - type: AtmosPipeColor
@@ -11074,8 +11059,6 @@ entities:
       pos: -4.5,-15.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 2168
     - type: AtmosPipeColor
@@ -11107,8 +11090,6 @@ entities:
       pos: 6.5,9.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 1069
     - type: AtmosPipeColor
@@ -11120,8 +11101,6 @@ entities:
       pos: -7.5,9.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 1069
     - type: AtmosPipeColor
@@ -11132,8 +11111,6 @@ entities:
       pos: -6.5,11.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 1069
     - type: AtmosPipeColor
@@ -11144,8 +11121,6 @@ entities:
       pos: 5.5,11.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 1069
     - type: AtmosPipeColor
@@ -11156,8 +11131,6 @@ entities:
       pos: 10.5,4.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 1069
     - type: AtmosPipeColor
@@ -11169,8 +11142,6 @@ entities:
       pos: 5.5,-1.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 1069
     - type: AtmosPipeColor
@@ -11182,8 +11153,6 @@ entities:
       pos: -6.5,-1.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 1069
     - type: AtmosPipeColor
@@ -11246,8 +11215,6 @@ entities:
       pos: -13.5,2.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 1069
     - type: AtmosPipeColor
@@ -11259,8 +11226,6 @@ entities:
       pos: 13.5,0.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 1069
     - type: AtmosPipeColor
@@ -11348,8 +11313,6 @@ entities:
       pos: 2.5,9.5
       parent: 1
     - type: DeviceNetwork
-      configurators:
-      - invalid
       deviceLists:
       - 1069
     - type: AtmosPipeColor
