Ledger printout at round end

--- a/Resources/Prototypes/_NF/Entities/Objects/Devices/cartridges.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Devices/cartridges.yml
@@ -64,6 +64,7 @@
     - type: Cartridge
       programName: ledger-program-name
       icon: _NF/Interface/icons.rsi/ledger.png
+      readonly: true
     - type: NFLedgerCartridge
 
 # Not a PDA cartridge (then why is this here)
