Fix rewardAccounts type

--- a/Resources/Prototypes/_NF/Events/nf_bluespace_grids_events.yml
+++ b/Resources/Prototypes/_NF/Events/nf_bluespace_grids_events.yml
@@ -33,9 +33,8 @@
           linearDamping: 999999
         paths:
         - /Maps/_NF/Bluespace/cache.yml
-    rewardFactor: 1
     rewardAccounts:
-    - Nfsd
+      Nfsd: 1.0
 
 - type: entity
   id: BluespaceVaultError
@@ -72,9 +71,8 @@
           linearDamping: 999999
         paths:
         - /Maps/_NF/Bluespace/vault.yml
-    rewardFactor: 1
     rewardAccounts:
-    - Nfsd
+      Nfsd: 1.0
 
 - type: entity
   id: BluespaceVaultSmallError
@@ -112,9 +110,8 @@
           linearDamping: 999999
         paths:
         - /Maps/_NF/Bluespace/vaultsmall.yml
-    rewardFactor: 1
     rewardAccounts:
-    - Nfsd
+      Nfsd: 1.0
 
 - type: entity
   id: BluespaceSyndicateFTLInterception
