Vendor tax consistency, move non-PDA ledger FTL

--- a/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
@@ -73,7 +73,8 @@
     maxIffRange: null # Frontier
   - type: CargoOrderConsole
     taxAccounts: # Frontier
-      Frontier: 0.4 # Frontier
+      Frontier: 0.25 # Frontier
+      Nfsd: 0.15 # Frontier
   - type: BankClient
   - type: CrewMonitoringConsole
   - type: GeneralStationRecordConsole
