--- a/Resources/Prototypes/Entities/Structures/Piping/Atmospherics/unary.yml
+++ b/Resources/Prototypes/Entities/Structures/Piping/Atmospherics/unary.yml
@@ -389,7 +389,7 @@
   - type: AtmosDevice
   - type: PipeRestrictOverlap
   - type: ApcPowerReceiver
-    powerLoad: 3000 #Frontier
+    powerLoad: 3000 # Frontier 10000<3000
   - type: Machine
     board: CondenserMachineCircuitBoard
   - type: WiresPanel
